--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_logout"
-        android:title="ログアウト"
-        android:icon="@drawable/ic_logout"
-        app:showAsAction="ifRoom" />
+        android:icon="@drawable/ic_hamberger_menu"/>
+    <item
+        android:id="@+id/nav_member_regist"
+        android:title="メンバー登録" />
 </menu>
