メンバー一覧画面を追加し、ハンバーガーメニューからアクセスできる場所をこちらに変更。メンバー一覧画面のAddボタンでメンバー登録画面に遷移

--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,6 +3,6 @@
     <item
         android:icon="@drawable/ic_hamberger_menu"/>
     <item
-        android:id="@+id/nav_member_regist"
-        android:title="メンバー登録" />
+        android:id="@+id/nav_member_list"
+        android:title="@string/title_member_list" />
 </menu>
