RecycleViewでリストビューを表示できるようにした

--- a/app/src/main/res/layout/activity_member_list.xml
+++ b/app/src/main/res/layout/activity_member_list.xml
@@ -29,7 +29,15 @@
                 android:id="@+id/frameLayout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_weight="1">
+
+                <!-- RecyclerViewをここに追加 -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            </FrameLayout>
 
             <!-- FloatingActionButton -->
             <com.google.android.material.floatingactionbutton.FloatingActionButton
