--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:icon="@drawable/ic_hamberger_menu"/>
+        android:icon="@drawable/ic_hamburger_menu"
+        android:title="@string/menu_title_hamburger"/>
     <item
         android:id="@+id/nav_home"
         android:title ="@string/title_home"/>
