--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:icon="@drawable/ic_hamburger_menu"
-        android:title="@string/menu_title_hamburger"/>
+        android:title=""/>
     <item
         android:id="@+id/nav_home"
         android:title ="@string/title_home"/>
