--- a/app/src/main/res/layout/activity_member_list.xml
+++ b/app/src/main/res/layout/activity_member_list.xml
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
                 android:layout_margin="50dp"
-                android:src="@drawable/ic_add" />
+                android:src="@drawable/ic_member_add" />
 
         </LinearLayout>
 
