登録した支払いを家計簿画面で一覧表示できるようにした

--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -11,6 +11,6 @@
         android:title="@string/title_member_list" />
 
     <item
-        android:id="@+id/nav_pay_record_add"
-        android:title="@string/title_add_pay_record"/>
+        android:id="@+id/nav_pay_record_list"
+        android:title="@string/title_pay_record_list"/>
 </menu>
