--- a/app/src/main/res/layout/activity_pay_record_list.xml
+++ b/app/src/main/res/layout/activity_pay_record_list.xml
@@ -1,6 +1,7 @@
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -24,31 +25,37 @@
                 android:background="?attr/colorPrimary"
                 android:elevation="10dp" />
 
-            <!-- コンテンツのためのFrameLayout -->
-            <FrameLayout
-                android:id="@+id/frameLayout"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-
-                <!-- RecyclerViewをここに追加 -->
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:scrollbars="vertical" />
-
-            </FrameLayout>
-
             <!-- FloatingActionButton -->
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="566dp">
+
+                <!-- コンテンツのためのFrameLayout -->
+                <FrameLayout
+                    android:id="@+id/frameLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp">
+
+                    <!-- RecyclerViewをここに追加 -->
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="16dp"
+                        android:scrollbars="vertical" />
+
+                </FrameLayout>
+
+            </ScrollView>
+
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/buttonPayRecordAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
-                android:layout_margin="50dp"
-                android:src="@drawable/ic_pay_record_add" />
+                android:layout_margin="10dp"
+                android:src="@drawable/ic_pay_record_add"
+                tools:ignore="ContentDescription" />
 
         </LinearLayout>
 
