退会機能を実装

--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -13,4 +13,8 @@
     <item
         android:id="@+id/nav_pay_record_list"
         android:title="@string/title_pay_record_list"/>
+
+    <item
+        android:id="@+id/nav_secession"
+        android:title="@string/title_secession"/>
 </menu>
