--- a/app/src/main/res/layout/activity_member_list.xml
+++ b/app/src/main/res/layout/activity_member_list.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -25,22 +26,27 @@
                 android:background="?attr/colorPrimary"
                 android:elevation="10dp" />
 
-            <!-- コンテンツのためのFrameLayout -->
-            <FrameLayout
-                android:id="@+id/frameLayout"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
+                android:layout_height="566dp">
 
-                <!-- RecyclerViewをここに追加 -->
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
+                <!-- コンテンツのためのFrameLayout -->
+                <FrameLayout
+                    android:id="@+id/frameLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="16dp"
-                    android:scrollbars="vertical" />
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
 
-            </FrameLayout>
+                    <!-- RecyclerViewをここに追加 -->
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="16dp"
+                        android:scrollbars="vertical" />
+
+                </FrameLayout>
+            </ScrollView>
 
             <!-- FloatingActionButton -->
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -48,8 +54,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
-                android:layout_margin="50dp"
-                android:src="@drawable/ic_member_add" />
+                android:layout_marginBottom="30dp"
+                android:layout_marginEnd="30dp"
+                android:src="@drawable/ic_member_add"
+                tools:ignore="ContentDescription"/>
 
         </LinearLayout>
 
