--- a/app/src/main/res/layout/activity_pay_record_list.xml
+++ b/app/src/main/res/layout/activity_pay_record_list.xml
@@ -54,7 +54,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
-                android:layout_margin="10dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginEnd="30dp"
                 android:src="@drawable/ic_pay_record_add"
                 tools:ignore="ContentDescription" />
 
