不要な設定の削除

--- a/app/src/main/res/layout/activity_member_list.xml
+++ b/app/src/main/res/layout/activity_member_list.xml
@@ -34,8 +34,7 @@
                 <FrameLayout
                     android:id="@+id/frameLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
+                    android:layout_height="0dp">
 
                     <!-- RecyclerViewをここに追加 -->
                     <androidx.recyclerview.widget.RecyclerView
