--- a/app/src/main/res/layout/activity_pay_record_list.xml
+++ b/app/src/main/res/layout/activity_pay_record_list.xml
@@ -48,18 +48,16 @@
                 </FrameLayout>
 
             </ScrollView>
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/buttonPayRecordAdd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|bottom"
-                android:layout_marginBottom="30dp"
-                android:layout_marginEnd="30dp"
-                android:src="@drawable/ic_pay_record_add"
-                tools:ignore="ContentDescription" />
-
         </LinearLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/buttonPayRecordAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="30dp"
+            android:src="@drawable/ic_add"
+            tools:ignore="ContentDescription" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
