タイトル変更

--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -11,10 +11,15 @@
         android:title="@string/title_member_list" />
 
     <item
+        android:id="@+id/nav_pay_purpose_list"
+        android:title="@string/title_pay_purpose_list"/>
+
+    <item
         android:id="@+id/nav_pay_record_list"
         android:title="@string/title_pay_record_list"/>
 
     <item
         android:id="@+id/nav_secession"
         android:title="@string/title_secession"/>
+
 </menu>
