データベースの修正

--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -8,9 +8,9 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/payPurposeNameTextView"
+        android:id="@+id/memberNameTextView"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="Pay Purpose Name" />
+        android:text="Person Name" />
 </LinearLayout>
