--- a/app/src/main/res/layout/activity_update_pay_record.xml
+++ b/app/src/main/res/layout/activity_update_pay_record.xml
@@ -43,8 +43,7 @@
                 android:spinnerMode="dropdown"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:entries="@array/pay_list"/>
+                android:layout_marginEnd="10dp" />
             <TextView
                 android:id="@+id/PayListError"
                 android:layout_width="match_parent"
