--- a/app/src/main/res/menu/menu_delete.xml
+++ b/app/src/main/res/menu/menu_delete.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_delete"
-        android:title="削除"
+        android:title="@string/button_member_delete"
         android:icon="@drawable/ic_delete"
         app:showAsAction="ifRoom" />
 </menu>
