支払い履歴の絞り込み機能追加・Spinnerのデフォルト選択肢追加

--- a/app/src/main/res/layout/activity_pay_record_list.xml
+++ b/app/src/main/res/layout/activity_pay_record_list.xml
@@ -26,6 +26,14 @@
                 android:background="?attr/colorPrimary"
                 android:elevation="10dp" />
 
+            <Button
+                android:id="@+id/buttonRefinement"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="@string/button_refinement_pay_record"
+                tools:ignore="RtlHardcoded" />
+
             <!-- FloatingActionButton -->
             <ScrollView
                 android:layout_width="match_parent"
