--- a/app/src/main/res/layout/activity_add_pay_record.xml
+++ b/app/src/main/res/layout/activity_add_pay_record.xml
@@ -33,8 +33,16 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginBottom="16dp"
                 android:spinnerMode="dropdown" />
+
+            <TextView
+                android:id="@+id/memberListError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="16dp"
+                android:textColor="@android:color/holo_red_dark"/>
 
             <Spinner
                 android:id="@+id/spPayList"
