パスワードの表示非表示の切り替え

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:padding="3dp"
+        app:passwordToggleEnabled="true"
         app:counterEnabled="true"
         app:errorEnabled="true">
 
