--- a/app/src/main/res/layout/activity_user_add.xml
+++ b/app/src/main/res/layout/activity_user_add.xml
@@ -15,27 +15,6 @@
         android:elevation="10dp" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/username"
-        android:padding="3dp"
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:counterEnabled="true"
-        app:errorEnabled="true">
-
-        <EditText
-            android:id="@+id/usernameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="@string/hint_username" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-
-    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/email"
         android:padding="3dp"
         android:layout_width="match_parent"
@@ -62,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        app:passwordToggleEnabled="true"
         app:counterEnabled="true"
         app:errorEnabled="true">
 
