--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -19,6 +19,10 @@
         android:title="@string/title_pay_record_list"/>
 
     <item
+        android:id="@+id/nav_user_update"
+        android:title="@string/title_user_update"/>
+
+    <item
         android:id="@+id/nav_logout"
         android:title="@string/title_logout"/>
 
