家計簿の登録とリストビューへの表示

--- a/app/src/main/res/layout/activity_balance_detail.xml
+++ b/app/src/main/res/layout/activity_balance_detail.xml
@@ -21,14 +21,6 @@
                 android:background="?attr/colorPrimary"
                 android:elevation="10dp" />
 
-            <Button
-                android:id="@+id/buttonSetInfo"
-                android:layout_marginTop="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="@string/button_set_info"/>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -116,11 +108,11 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/buttonBalanceSheetAdd"
+                    android:id="@+id/buttonBalanceSheetUpdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="家計簿の登録"/>
+                    android:text="家計簿の更新"/>
 
                 <TextView
                     android:layout_width="wrap_content"
