家計簿の更新機能追加

--- a/app/src/main/res/layout/activity_pay_record_detail.xml
+++ b/app/src/main/res/layout/activity_pay_record_detail.xml
@@ -152,7 +152,7 @@
                 android:id="@+id/buttonPayRecordUpdate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/button_pay_record_update"/>
+                android:text="@string/button_update"/>
         </LinearLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
