--- a/app/src/main/res/layout/activity_member_update.xml
+++ b/app/src/main/res/layout/activity_member_update.xml
@@ -49,7 +49,7 @@
                 android:layout_margin="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/button_member_update" />
+                android:text="@string/button_update" />
 
         </LinearLayout>
 
