--- a/app/src/main/res/layout/activity_pay_purpose_add.xml
+++ b/app/src/main/res/layout/activity_pay_purpose_add.xml
@@ -48,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="@string/button_pay_record_add"/>
+                android:text="@string/button_add"/>
 
         </LinearLayout>
 
