--- a/app/src/main/res/layout/activity_pay_record_update.xml
+++ b/app/src/main/res/layout/activity_pay_record_update.xml
@@ -130,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="@string/button_pay_record_update" />
+                android:text="@string/button_update" />
 
         </LinearLayout>
 
