--- a/app/src/main/res/layout/fragment_pay_record_list_refinement.xml
+++ b/app/src/main/res/layout/fragment_pay_record_list_refinement.xml
@@ -6,9 +6,14 @@
 
     <Spinner
         android:id="@+id/spinnerMember"
-        android:layout_marginBottom="30dp"
         android:layout_width="match_parent"
         android:layout_height="40dp" />
+
+    <TextView
+        android:id="@+id/memberListError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"/>
 
     <EditText
         android:id="@+id/startDateEditText"
